<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MovieStore</string>
    <string name="title_activity_movies_list">MoviesListActivity</string>


    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- TabLayout title-->
    <string name="default_tab">Movies</string>
    <string name="favourite_tab">Favourite</string>
    <string name="setting_tab">Setting</string>
    <string name="about_tab">About</string>
    <string name="map_tab">Map</string>

    <!-- Movie title -->
    <string name="date">Release Date: </string>
    <string name="rate_count">Rating: </string>
    <string name="over_view">Overview: </string>

    <!-- Main menu -->
    <string name="action_settings">Settings</string>
    <string name="action_movies">Movies</string>
    <string name="action_favourite">Favourite</string>
    <string name="action_about">About</string>

    <string name="remind_button">Reminder</string>
    <string name="cast_and_crew">Cast And Crew: </string>

    <string name="btn_edit">Edit</string>
    <string name="show_all">Show All</string>
    <string name="txt_reminder">Reminder</string>

    <string name="fav_movie_delete_item">Delete</string>
    <string name="fav_movie_delete_cancel_item">Cancel</string>
    <string name="delete_btn">Delete</string>
    <string name="searchable_hint">movie name</string>
    <string name="delete_confirm">Are you sure you want to delete?</string>
    <string name="start_datepicker_title">start_date_picker</string>
    <string name="start_timepicker_title">start time picker</string>
    <string name="edit_profile_cancel">Cancel</string>
    <string name="done_profile_cancel">Done</string>
    <string name="btn_switch_profile">Switch Profiles</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="name_title">name</string>
    <string name="camera_option">Camera</string>
    <string name="gallery_option">Gallery</string>


    <string name="category_title">Category</string>
    <string name="filter_group_title">FILTER</string>
    <string name="sort_group_title">SORT</string>
    <string name="from_rate_title">Movie with rate from</string>
    <string name="from_year">From release year</string>
    <string name="sort_by_title">Sort By</string>
    <string name="filter_year_title">From Release Year</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>

    <string name="category_pop_movie">Popular Movies</string>
    <string name="category_rate_movie">Top Rated Movies</string>
    <string name="category_Upcoming_movie">Upcoming Movies</string>
    <string name="category_Now_movie">Now Playing Movies</string>

    <string name="sort_release_date_text">Release Date</string>
    <string name="sort_rate_text">Release Rating</string>

    <string name="movie_tab_title">Movies</string>
    <string name="fav_tab_title">Favourite</string>
    <string name="setting_tab_title">Setting</string>
    <string name="about_tab_title">About</string>
    <string name="all_reminder_title">All Reminder</string>

    <string name="edit_profile_done">Done</string>
    <string name="actor_overview_title">Overview</string>
    <string name="cast_crew_name">Name</string>
    <string name="actor_name_title">Name:</string>
    <string name="actor_birthday_title">Birthday:</string>
    <string name="btn_actor_detail_done">Done</string>


    <declare-styleable name="CircleImageView">
        <attr name="civ_border_width" format="dimension" />
        <attr name="civ_border_color" format="color" />
        <attr name="civ_border_overlay" format="boolean" />
        <attr name="civ_fill_color" format="color" />
    </declare-styleable>
    <string name="title_activity_cast_crew">CastCrewActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="do_cancel">Cancel</string>
    <string name="do_call">Call</string>
    <string name="new_profile">New Profile</string>
    <string name="profile_title">Switch Profiles</string>

</resources>
