<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="5"
    tools:context="com.fsoft.sonic_larue.khanhnv10.moviestore.view.actor.DetailActorFragment">

    <RelativeLayout
        android:id="@+id/actor_header"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:visibility="invisible">

        <TextView
            android:id="@+id/actor_name_title"
            android:text="@string/actor_name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/pro_black_style"/>

        <TextView
            android:id="@+id/actor_name"
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textColorPrimary"
            android:textSize="15sp"
            android:layout_toRightOf="@+id/actor_name_title"/>

        <TextView
            android:id="@+id/actor_birthday_title"
            android:text="@string/actor_birthday_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/pro_black_style"
            android:layout_below="@+id/actor_name"/>

        <TextView
            android:id="@+id/actor_birthday"
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textColorPrimary"
            android:textSize="15sp"
            android:layout_toRightOf="@+id/actor_birthday_title"
            android:layout_below="@+id/actor_name"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/actor_body"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

        <com.android.volley.toolbox.NetworkImageView
            android:id="@+id/cast_crew_image"
            android:scaleType="centerCrop"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <include layout="@layout/loading_process"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/actor_footer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="10dp"
        android:visibility="invisible">

        <TextView
            android:id="@+id/actor_overview_title"
            android:text="@string/actor_overview_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/pro_black_style"/>

        <TextView
            android:id="@+id/actor_overview_content"
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/textColorPrimary"
            android:layout_below="@+id/actor_overview_title"
            android:scrollbars="vertical" />
    </RelativeLayout>
</LinearLayout>